# vaillant-netatmo-api

./: CHANGELOG.md  README.md  example.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: python-release.yml  python-test.yml  release.yml  tests.yml
src/vaillant_netatmo_api/: __init__.py  auth.py  auth_test.py  base.py  errors.py  errors_test.py  home.py  thermostat.py  thermostat_auth.py  thermostat_home_test.py  thermostat_program_test.py  thermostat_test.py  time.py  token.py  token_test.py
vaillant_netatmo_api/: __init__.py  auth.py  base.py  thermostat.py
