[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "vaillant-netatmo-api"
version = "0.13.0"
authors = [
    { name="Mislav Mandaric" },
]
description = "Python 3 library for managing Vaillant thermostats using the Netatmo API."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.18.2",
    "tenacity>=8.0.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MislavMandaric/vaillant-netatmo-api"
Issues = "https://github.com/MislavMandaric/vaillant-netatmo-api/issues"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"
major_on_zero = false
