[metadata]
name = vaillant_netatmo_api
version = 0.0.1
author = Mislav Mandaric
description = Python 3 library for managing Vaillant thermostats using the Netatmo API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MislavMandaric/vaillant_netatmo_api
project_urls =
    Bug Tracker = https://github.com/MislavMandaric/vaillant_netatmo_api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = vaillant_netatmo_api
packages = find:
python_requires = >=3.8
install_requires =
    Authlib>=0.15.4
    httpx>=0.18.2

[options.packages.find]
where = vaillant_netatmo_api