[metadata]
name = vaillant-netatmo-api
version = 0.0.2
author = Mislav Mandaric
description = Python 3 library for managing Vaillant thermostats using the Netatmo API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MislavMandaric/vaillant-netatmo-api
project_urls =
    Bug Tracker = https://github.com/MislavMandaric/vaillant-netatmo-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    Authlib>=0.15.4
    httpx>=0.18.2

[options.packages.find]
where = src

[semantic_release]
version_pattern = setup.cfg:version = {version}
build_command = pip install build && python -m build
branch = release
major_on_zero = false